--- a/hugo.toml
+++ b/hugo.toml
@@ -1,217 +1,23 @@
 baseURL = "https://buribai.com"
-# [en, zh-cn, fr, pl, ...] determines default content language
-# [en, zh-cn, fr, pl, ...] 设置默认的语言
-defaultContentLanguage = "en"
-# theme
-# 主题
+defaultContentLanguage = "zh-cn"
 theme = ""
-# themes directory
-# 主题目录
 themesDir = "../"
+title = "NoCap不日白"
 
-# website title
-# 网站标题
-title = "FeelIt"
-
-# whether to use robots.txt
 # 是否使用 robots.txt
 enableRobotsTXT = true
-# whether to use git commit log
 # 是否使用 git 信息
 enableGitInfo = true
-# whether to use emoji code
 # 是否使用 emoji 代码
 enableEmoji = true
-# UA-PROPERTY_ID or G-MEASUREMENT_ID google analytics code
 # UA-PROPERTY_ID 或者是 G-MEASUREMENT_ID 的 google analytics 代码
 googleAnalytics = ""
 
 ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstoken", "error-remote-getjson"]
 
 [languages]
-  [languages.en]
-    weight = 1
-    # language code
-    languageCode = "en"
-    # language name
-    languageName = "English"
-    # whether to include Chinese/Japanese/Korean
-    hasCJKLanguage = false
-    # copyright description used only for seo schema
-    copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
-    # Menu config
-    [languages.en.menu]
-      [[languages.en.menu.main]]
-        identifier = "posts"
-        # you can add extra information before the name (HTML format is supported), such as icons
-        pre = ""
-        # you can add extra information after the name (HTML format is supported), such as icons
-        post = ""
-        name = "Posts"
-        # the URL is ignored for parent menu items, as they function as dropdown toggles
-        url = "/posts/"
-        # title will be shown when you hover on this menu link.
-        title = ""
-        weight = 1
-        [[languages.en.menu.main]]
-          identifier = "allposts"
-          pre = ""
-          post = ""
-          name = "All Posts"
-          url = "/posts/"
-          title = ""
-          weight = 1
-          parent = "posts"
-        [[languages.en.menu.main]]
-          identifier = "tags"
-          pre = ""
-          post = ""
-          name = "Tags"
-          url = "/tags/"
-          title = ""
-          weight = 2
-          parent = "posts"
-        [[languages.en.menu.main]]
-          identifier = "categories"
-          pre = ""
-          post = ""
-          name = "Categories"
-          url = "/categories/"
-          title = ""
-          weight = 3
-          parent = "posts"
-      [[languages.en.menu.main]]
-        identifier = "documentation"
-        pre = ""
-        post = ""
-        name = "Docs"
-        url = "/categories/documentation/"
-        title = ""
-        weight = 2
-      [[languages.en.menu.main]]
-        identifier = "about"
-        pre = ""
-        post = ""
-        name = "About"
-        url = "/about/"
-        title = ""
-        weight = 3
-      [[languages.en.menu.main]]
-        identifier = "github"
-        pre = "<i class='fa-brands fa-github fa-fw'></i>"
-        post = ""
-        name = ""
-        url = "https://github.com/khusika/FeelIt"
-        title = "GitHub"
-        weight = 4
-    [languages.en.pagination]
-      # default amount of posts in each pages
-      pagerSize = 12
-    [languages.en.params]
-      # site description
-      description = "About FeelIt Theme"
-      # site keywords
-      keywords = ["Theme", "Hugo"]
-      # App icon config
-      [languages.en.params.app]
-        # optional site title override for the app when added to an iOS home screen or Android launcher
-        title = "FeelIt"
-        # whether to omit favicon resource links
-        noFavicon = false
-        # modern SVG favicon to use in place of older style .png and .ico files
-        svgFavicon = ""
-        # Android browser theme color
-        themeColor = "#ffffff"
-        # Safari mask icon color
-        iconColor = "#5bbad5"
-        # Windows v8-10 tile color
-        tileColor = "#da532c"
-      # Search config
-      [languages.en.params.search]
-        enable = true
-        # type of search engine ("lunr", "algolia")
-        type = "algolia"
-        # max index length of the chunked content
-        contentLength = 4000
-        # placeholder of the search bar
-        placeholder = ""
-        # max number of results length
-        maxResultLength = 10
-        # snippet length of the result
-        snippetLength = 30
-        # HTML tag name of the highlight part in results
-        highlightTag = "em"
-        # whether to use the absolute URL based on the baseURL in search index
-        absoluteURL = false
-        [languages.en.params.search.algolia]
-          index = "index.en"
-          appID = "5B8WK81970"
-          searchKey = "8e34155b33dee72726c906c5efba0d71"
-
-      # About page config
-      [languages.en.params.about]
-        # whether to enable profile on about page
-        # depends on .Site.Params.home.profile.enable
-        enable = true
-        # whether to enable param layout
-        param = true
-        # title for param layout
-        paramTitle = "Personal Information"
-        # description of your status
-        [[languages.en.params.about.status]]
-          faIcon = "fa-solid fa-building"
-          title = "Company"
-          desc = "FeelIt"
-        [[languages.en.params.about.status]]
-          faIcon = "fa-solid fa-briefcase fa-fw"
-          title = "Occupation"
-          desc = "Freelancer"
-        [[languages.en.params.about.status]]
-          title = "Location"
-          faIcon = "fa-solid fa-map-marker-alt"
-          desc = "Earth"
-        # description of your parameter
-        [[languages.en.params.about.parameter]]
-          language = "UI/UX"
-          level = "80"
-        [[languages.en.params.about.parameter]]
-          language = "HTML"
-          level = "70"
-        [[languages.en.params.about.parameter]]
-          language = "Go"
-          level = "60"
-
-      # Home page config
-      [languages.en.params.home]
-        # amount of RSS pages
-        rss = 10
-        # Home page profile
-        [languages.en.params.home.profile]
-          enable = true
-          # Gravatar Email for preferred avatar in home page
-          gravatarEmail = ""
-          # URL of avatar shown in home page
-          avatarURL = "/images/avatar.webp"
-          # title shown in home page (HTML format is supported)
-          title = ""
-          # subtitle shown in home page (HTML format is supported)
-          subtitle = "A Clean, Elegant but Advanced Hugo Theme"
-          # whether to use typeit animation for subtitle
-          typeit = true
-          # whether to show social links
-          social = true
-          # disclaimer (HTML format is supported)
-          disclaimer = ""
-        # Home page posts
-        [languages.en.params.home.posts]
-          enable = true
-          # special amount of posts in each home posts page
-          paginate = 6
-          # display image-preview
-          imagePreview = true
-
   [languages.zh-cn]
-    weight = 2
+    weight = 1
     # 网站语言, 仅在这里 CN 大写
     languageCode = "zh-CN"
     # 语言名称
@@ -379,201 +185,28 @@ ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstok
           # display image-preview
           imagePreview = true
 
-  [languages.fr]
-    weight = 3
-    # language code
-    languageCode = "fr"
-    # language name
-    languageName = "Français"
-    # whether to include Chinese/Japanese/Korean
-    hasCJKLanguage = false
-    # copyright description used only for seo schema
-    copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
-    # Menu config
-    [languages.fr.menu]
-      [[languages.fr.menu.main]]
-        identifier = "posts"
-        pre = ""
-        post = ""
-        name = "Postes"
-        url = "/posts/"
-        title = ""
-        weight = 1
-        [[languages.fr.menu.main]]
-          identifier = "tags"
-          pre = ""
-          post = ""
-          name = "Balises"
-          url = "/tags/"
-          title = ""
-          weight = 2
-          parent = "posts"
-        [[languages.fr.menu.main]]
-          identifier = "categories"
-          pre = ""
-          post = ""
-          name = "Catégories"
-          url = "/categories/"
-          title = ""
-          weight = 3
-          parent = "posts"
-      [[languages.fr.menu.main]]
-        identifier = "documentation"
-        pre = ""
-        post = ""
-        name = "Docs"
-        url = "/categories/documentation/"
-        title = ""
-        weight = 4
-      [[languages.fr.menu.main]]
-        identifier = "about"
-        pre = ""
-        name = "À propos"
-        url = "/about/"
-        title = ""
-        weight = 5
-      [[languages.fr.menu.main]]
-        identifier = "github"
-        pre = "<i class='fa-brands fa-github fa-fw'></i>"
-        post = ""
-        name = ""
-        url = "https://github.com/khusika/FeelIt"
-        title = "GitHub"
-        weight = 6
-    [languages.fr.pagination]
-      # default amount of posts in each pages
-      pagerSize = 12
-    [languages.fr.params]
-      # site description
-      description = "À propos du thème FeelIt"
-      # site keywords
-      keywords = ["Thème", "Hugo"]
-      # App icon config
-      [languages.fr.params.app]
-        # optional site title override for the app when added to an iOS home screen or Android launcher
-        title = "FeelIt"
-        # whether to omit favicon resource links
-        noFavicon = false
-        # modern SVG favicon to use in place of older style .png and .ico files
-        svgFavicon = ""
-        # Android browser theme color
-        themeColor = "#ffffff"
-        # Safari mask icon color
-        iconColor = "#5bbad5"
-        # Windows v8-10 tile color
-        tileColor = "#da532c"
-      # Search config
-      [languages.fr.params.search]
-        enable = true
-        # type of search engine ("lunr", "algolia")
-        type = "algolia"
-        # max index length of the chunked content
-        contentLength = 4000
-        # placeholder of the search bar
-        placeholder = ""
-        # max number of results length
-        maxResultLength = 10
-        # snippet length of the result
-        snippetLength = 30
-        # HTML tag name of the highlight part in results
-        highlightTag = "em"
-        # whether to use the absolute URL based on the baseURL in search index
-        absoluteURL = false
-        [languages.fr.params.search.algolia]
-          index = "index.fr"
-          appID = "5B8WK81970"
-          searchKey = "8e34155b33dee72726c906c5efba0d71"
-
-      # About page config
-      [languages.fr.params.about]
-        # whether to enable profile on about page
-        # depends on .Site.Params.home.profile.enable
-        enable = true
-        # whether to enable param layout
-        param = true
-        # title for param layout
-        paramTitle = "Informations Personnelles"
-        # description of your status
-        [[languages.fr.params.about.status]]
-          faIcon = "fa-solid fa-building"
-          title = "Compagnie"
-          desc = "FeelIt"
-        [[languages.fr.params.about.status]]
-          faIcon = "fa-solid fa-briefcase fa-fw"
-          title = "Occupation"
-          desc = "Indépendant"
-        [[languages.fr.params.about.status]]
-          title = "Lieu"
-          faIcon = "fa-solid fa-map-marker-alt"
-          desc = "Terre"
-        # description of your parameter
-        [[languages.fr.params.about.parameter]]
-          language = "UI/UX"
-          level = "80"
-        [[languages.fr.params.about.parameter]]
-          language = "HTML"
-          level = "70"
-        [[languages.fr.params.about.parameter]]
-          language = "Go"
-          level = "60"
-
-      # Home page config
-      [languages.fr.params.home]
-        # amount of RSS pages
-        rss = 10
-        # Home page profile
-        [languages.fr.params.home.profile]
-          enable = true
-          # Gravatar Email for preferred avatar in home page
-          gravatarEmail = ""
-          # URL of avatar shown in home page
-          avatarURL = "/images/avatar.webp"
-          # title shown in home page (HTML format is supported)
-          title = ""
-          # subtitle shown in home page (HTML format is supported)
-          subtitle = "Un thème Hugo simple, élégant et efficace"
-          # whether to use typeit animation for subtitle
-          typeit = true
-          # whether to show social links
-          social = true
-          # disclaimer (HTML format is supported)
-          disclaimer = ""
-        # Home page posts
-        [languages.fr.params.home.posts]
-          enable = true
-          # special amount of posts in each home posts page
-          paginate = 6
-          # display image-preview
-          imagePreview = true
 
 [params]
-  # FeelIt theme version
   # FeelIt 主题版本
   version = "1.0.X"
-  # site default theme ("light", "dark", "auto")
   # 网站默认主题 ("light", "dark", "auto")
   defaultTheme = "auto"
-  # public git repo url only then enableGitInfo is true
   # 公共 git 仓库路径，仅在 enableGitInfo 设为 true 时有效
   gitRepo = "https://github.com/khusika/FeelIt"
-  # which hash function used for SRI, when empty, no SRI is used ("sha256", "sha384", "sha512", "md5")
   # 哪种哈希函数用来 SRI, 为空时表示不使用 SRI ("sha256", "sha384", "sha512", "md5")
   fingerprint = ""
-  # date format
   # 日期格式
   dateFormat = "2006-01-02"
-  # website images for Open Graph and Twitter Cards
   # 网站图片, 用于 Open Graph 和 Twitter Cards
   images = ["/logo.png"]
-  # whether to enable CSS and JS source mapping
   # 是否要开启 CSS 和 JS 资源映射
   SourceMap = false
 
   # Author config
   # 作者配置
   [params.author]
-    name = "xxxx"
-    email = ""
+    name = "NoCap不日白"
+    email = "NoCapBRB@iCloud.com"
     link = ""
 
   # PWA config
@@ -586,59 +219,43 @@ ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstok
   # Header config
   # 页面头部导航栏配置
   [params.header]
-    # desktop header mode ("fixed", "normal", "auto")
     # 桌面端导航栏模式 ("fixed", "normal", "auto")
     desktopMode = "fixed"
-    # mobile header mode ("fixed", "normal", "auto")
     # 移动端导航栏模式 ("fixed", "normal", "auto")
     mobileMode = "auto"
-    # Header title config
     # 页面头部导航栏标题配置
     [params.header.title]
-      # URL of the LOGO
       # LOGO 的 URL
       logo = ""
-      # title name
       # 标题名称
       name = "FeelIt"
-      # you can add extra information before the name (HTML format is supported), such as icons
-      # 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
       pre = "<i class='fa-solid fa-hand-holding-heart fa-fw'></i>"
-      # you can add extra information after the name (HTML format is supported), such as icons
       # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
       post = ""
-      # whether to use typeit animation for title name
       # 是否为标题显示打字机动画
       typeit = false
-      # whether to show RSS icon
       # 是否显示RSS图标
-      rss = true
+      rss = false
 
-  # Footer config
+
   # 页面底部信息配置
   [params.footer]
     enable = true
-    # Custom content (HTML format is supported)
     # 自定义内容 (支持 HTML 格式)
     custom = ''
-    # whether to show Hugo and theme info
     # 是否显示 Hugo 和主题信息
-    hugo = true
-    # whether to show copyright info
+    hugo = false
     # 是否显示版权信息
     copyright = true
-    # whether to show the author
     # 是否显示作者
     author = true
-    # site creation time
     # 网站创立年份
-    since = 2019
-    # ICP info only in China (HTML format is supported)
+    since = 2026
     # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
     icp = ""
     # license info (HTML format is supported)
     # 许可协议信息 (支持 HTML 格式)
-    license= '<a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
+    license= ""
 
   # Section (all posts) page config
   # Section (所有文章) 页面配置
@@ -649,7 +266,6 @@ ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstok
     # date format (month and day)
     # 日期格式 (月和日)
     dateFormat = "01-02"
-    # amount of RSS pages
     # RSS 文章数目
     rss = 10
 
@@ -939,73 +555,73 @@ ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstok
   # Social config in home page
   # 主页的社交信息设置
   [params.social]
-    GitHub = "xxxx"
-    Linkedin = ""
-    Twitter = "xxxx"
-    Instagram = "xxxx"
-    Facebook = "xxxx"
-    Telegram = "xxxx"
-    Medium = ""
-    Gitlab = ""
-    Youtubelegacy = "xxxx"
-    Youtubecustom = ""
-    Youtubechannel = ""
-    Tumblr = ""
-    Quora = ""
-    Keybase = ""
-    Pinterest = ""
-    Reddit = ""
-    Codepen = ""
-    FreeCodeCamp = ""
-    Bitbucket = ""
-    Stackoverflow = ""
-    Weibo = ""
-    Odnoklassniki = ""
-    VK = ""
-    Flickr = ""
-    Xing = ""
-    Snapchat = ""
-    Soundcloud = ""
-    Spotify = ""
-    Bandcamp = ""
-    Paypal = ""
-    Fivehundredpx = ""
-    Mix = ""
-    Goodreads = ""
-    Lastfm = ""
-    Foursquare = ""
-    Hackernews = ""
-    Kickstarter = ""
-    Patreon = ""
-    Steam = ""
-    Twitch = ""
-    Strava = ""
-    Skype = ""
-    Whatsapp = ""
-    Zhihu = ""
-    Douban = ""
-    Angellist = ""
-    Slidershare = ""
-    Jsfiddle = ""
-    Deviantart = ""
-    Behance = ""
-    Dribbble = ""
-    Wordpress = ""
-    Vine = ""
-    Googlescholar = ""
-    Researchgate = ""
-    Thingiverse = ""
-    Devto = ""
-    Gitea = ""
-    XMPP = ""
-    Matrix = ""
-    Bilibili = ""
-    Email = "xxxx@xxxx.com"
-    Resume = "" #goo.gl id
-    xda = ""
-    kaggle = ""
-    discord = ""
-    RSS = true
+    # GitHub = "xxxx"
+    # Linkedin = ""
+    # Twitter = "xxxx"
+    # Instagram = "xxxx"
+    # Facebook = "xxxx"
+    # Telegram = "xxxx"
+    # Medium = ""
+    # Gitlab = ""
+    # Youtubelegacy = "xxxx"
+    # Youtubecustom = ""
+    # Youtubechannel = ""
+    # Tumblr = ""
+    # Quora = ""
+    # Keybase = ""
+    # Pinterest = ""
+    # Reddit = ""
+    # Codepen = ""
+    # FreeCodeCamp = ""
+    # Bitbucket = ""
+    # Stackoverflow = ""
+    # Weibo = ""
+    # Odnoklassniki = ""
+    # VK = ""
+    # Flickr = ""
+    # Xing = ""
+    # Snapchat = ""
+    # Soundcloud = ""
+    # Spotify = ""
+    # Bandcamp = ""
+    # Paypal = ""
+    # Fivehundredpx = ""
+    # Mix = ""
+    # Goodreads = ""
+    # Lastfm = ""
+    # Foursquare = ""
+    # Hackernews = ""
+    # Kickstarter = ""
+    # Patreon = ""
+    # Steam = ""
+    # Twitch = ""
+    # Strava = ""
+    # Skype = ""
+    # Whatsapp = ""
+    # Zhihu = ""
+    # Douban = ""
+    # Angellist = ""
+    # Slidershare = ""
+    # Jsfiddle = ""
+    # Deviantart = ""
+    # Behance = ""
+    # Dribbble = ""
+    # Wordpress = ""
+    # Vine = ""
+    # Googlescholar = ""
+    # Researchgate = ""
+    # Thingiverse = ""
+    # Devto = ""
+    # Gitea = ""
+    # XMPP = ""
+    # Matrix = ""
+    # Bilibili = ""
+    Email = "NoCapBRB@iCloud.com"
+    # Resume = "" #goo.gl id
+    # xda = ""
+    # kaggle = ""
+    # discord = ""
+    # RSS = true
     [params.social.Mastodon]
       id = "@xxxx"
       prefix = "https://mastodon.technology/"
