--- a/hugo.toml
+++ b/hugo.toml
@@ -168,9 +168,9 @@ ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstok
           # 主页显示头像的 URL
           avatarURL = "/images/avatar.webp"
           # 主页显示的网站标题 (支持 HTML 格式)
-          title = ""
+          title = "NoCap不日白"
           # 主页显示的网站副标题 (支持 HTML 格式)
-          subtitle = "一个简洁、优雅且高效的 Hugo 主题"
+          subtitle = "关注 + 三连：支持作者持续更新！"
           # 是否为副标题显示打字机动画
           typeit = true
           # 是否显示社交账号
@@ -228,8 +228,8 @@ ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstok
       # LOGO 的 URL
       logo = ""
       # 标题名称
-      name = "FeelIt"
-      pre = "<i class='fa-solid fa-hand-holding-heart fa-fw'></i>"
+      name = "NoCap不日白"
+      pre = ""
       # 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
       post = ""
       # 是否为标题显示打字机动画
