--- a/hugo.toml
+++ b/hugo.toml
@@ -622,9 +622,15 @@ ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstok
     # kaggle = ""
     # discord = ""
     # RSS = true
-    [params.social.Mastodon]
-      id = "@xxxx"
-      prefix = "https://mastodon.technology/"
+    [params.social.xhs]
+        id = "55fa010667bc65702d8d25e1"
+        prefix = "https://www.xiaohongshu.com/user/profile/"
+        title = "小红书" 
+    [params.social.Wechat]
+        id = "LlT3rtsId62xkkQSgIY37Q"
+        prefix = "https://mp.weixin.qq.com/s/"
+        title = "微信"
+  
 
   # TypeIt config
   # TypeIt 配置
