--- a/hugo.toml
+++ b/hugo.toml
@@ -554,11 +554,10 @@ ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstok
     # Telegram = "xxxx"
     # Bilibili = ""  
     Email = "NoCapBRB@iCloud.com"
-    [params.social.xhs]
-        id = "55fa010667bc65702d8d25e1"
-        prefix = "https://www.xiaohongshu.com/user/profile/"
-        title = "小红书" 
-
+    # [params.social.xhs]
+    #     id = "55fa010667bc65702d8d25e1"
+    #     prefix = "https://www.xiaohongshu.com/user/profile/"
+    #     title = "小红书" 
     [params.social.Wechat]
         id = "LlT3rtsId62xkkQSgIY37Q"
         prefix = "https://mp.weixin.qq.com/s/"
