--- a/hugo.toml
+++ b/hugo.toml
@@ -554,14 +554,15 @@ ignoreErrors = ["err-missing-comment-accesstoken", "err-missing-oembed-accesstok
     # Telegram = "xxxx"
     # Bilibili = ""  
     Email = "NoCapBRB@iCloud.com"
+    Wechat = "https://mp.weixin.qq.com/s/LlT3rtsId62xkkQSgIY37Q"
     # [params.social.xhs]
     #     id = "55fa010667bc65702d8d25e1"
     #     prefix = "https://www.xiaohongshu.com/user/profile/"
     #     title = "小红书" 
-    [params.social.Wechat]
-        id = "LlT3rtsId62xkkQSgIY37Q"
-        prefix = "https://mp.weixin.qq.com/s/"
-        title = "微信"
+    # [params.social.Wechat]
+    #     id = "LlT3rtsId62xkkQSgIY37Q"
+    #     prefix = "https://mp.weixin.qq.com/s/"
+    #     title = "微信"
 
         
 
